--- a/index.html
+++ b/index.html
@@ -813,6 +813,11 @@ pre.rouge {
 </ul>
 </li>
 <li><a href="#differences-with-clojure">Differences with Clojure</a></li>
+<li><a href="#resources">Resources</a>
+<ul class="sectlevel2">
+<li><a href="#_books">Books</a></li>
+</ul>
+</li>
 <li><a href="#contributing">Contributing</a></li>
 <li><a href="#license">License</a></li>
 </ul>
@@ -851,7 +856,7 @@ list of beginner resources.</p>
 <div class="sect2">
 <h3 id="_setting_expectations"><a class="link" href="#_setting_expectations">Setting expectations</a></h3>
 <div class="paragraph">
-<p>Babashka uses <a href="https://github.com/babashka/SCI">SCI</a> for interpreting Clojure. Sci
+<p>Babashka uses <a href="https://github.com/babashka/SCI">SCI</a> for interpreting Clojure. SCI
 implements a substantial subset of Clojure. Interpreting code is in general not
 as performant as executing compiled code. If your script takes more than a few
 seconds to run or has lots of loops, Clojure on the JVM may be a better fit, as
@@ -961,7 +966,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>Babashka v1.0.167
+<pre>Babashka v1.0.170
 
 Usage: bb [svm-opts] [global-opts] [eval opts] [cmdline args]
 or:    bb [svm-opts] [global-opts] file [cmdline args]
@@ -3961,6 +3966,27 @@ info <a href="#core_async">here</a>.</p>
 </div>
 </div>
 <div class="sect1">
+<h2 id="resources"><a class="link" href="#resources">Resources</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Check out the list of resources in babashka&#8217;s <a href="https://github.com/babashka/babashka#articles-podcasts-and-videos">README.md</a>.</p>
+</div>
+<div class="sect2">
+<h3 id="_books"><a class="link" href="#_books">Books</a></h3>
+<div class="sect3">
+<h4 id="_babashka_babooka"><a class="link" href="#_babashka_babooka"><a href="https://www.braveclojure.com/quests/babooka/">Babashka Babooka</a></a></h4>
+<div class="paragraph">
+<p>If you’re a fan of
+<a href="https://www.braveclojure.com/clojure-for-the-brave-and-true/">Clojure for the
+Brave and True</a>, you might enjoy
+<a href="https://www.braveclojure.com/quests/babooka/">Babashka Babooka</a>, a book by the
+same author, Daniel Higginbotham!</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="contributing"><a class="link" href="#contributing">Contributing</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -3983,7 +4009,7 @@ make an issue and/or PR.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-12 13:18:37 +0200
+Last updated 2023-01-23 15:27:14 +0100
 </div>
 </div>
 <!-- see https://github.com/asciidoctor/asciidoctor/issues/699#issuecomment-321066006 -->
