--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>Babashka v1.0.170
+<pre>Babashka v1.1.171
 
 Usage: bb [svm-opts] [global-opts] [eval opts] [cmdline args]
 or:    bb [svm-opts] [global-opts] file [cmdline args]
@@ -984,6 +984,7 @@ Global opts:
   --init &lt;file&gt;     Load file after any preloads and prior to evaluation/subcommands.
   --config &lt;file&gt;   Replacing bb.edn with file. Relative paths are resolved relative to file.
   --deps-root &lt;dir&gt; Treat dir as root of relative paths in config.
+  --prn             Print result via clojure.core/prn
   -Sforce           Force recalculation of the classpath (don't use the cache)
   -Sdeps            Deps data to use as the last deps file to be merged
 
