--- a/index.html
+++ b/index.html
@@ -806,7 +806,6 @@ pre.rouge {
 <li><a href="#main_file">Main file</a></li>
 <li><a href="#_shutdown_hook">Shutdown hook</a></li>
 <li><a href="#_printing_returned_values">Printing returned values</a></li>
-<li><a href="#_http_requests">HTTP requests</a></li>
 <li><a href="#core_async">Core.async</a></li>
 <li><a href="#_interacting_with_an_nrepl_server">Interacting with an nREPL server</a></li>
 <li><a href="#_running_from_cygwingit_bash">Running from Cygwin/Git Bash</a></li>
@@ -1067,11 +1066,11 @@ When no eval opts or subcommand is provided, the implicit subcommand is repl.</p
 <div class="content">
 <pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
 
-</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.curl</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">curl</span><span class="p">])</span><span class="w">
+</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.http-client</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">http</span><span class="p">])</span><span class="w">
 
 </span><span class="p">(</span><span class="k">defn</span><span class="w"> </span><span class="n">get-url</span><span class="w"> </span><span class="p">[</span><span class="n">url</span><span class="p">]</span><span class="w">
   </span><span class="p">(</span><span class="nb">println</span><span class="w"> </span><span class="s">"Downloading url:"</span><span class="w"> </span><span class="n">url</span><span class="p">)</span><span class="w">
-  </span><span class="p">(</span><span class="nf">curl/get</span><span class="w"> </span><span class="n">url</span><span class="p">))</span><span class="w">
+  </span><span class="p">(</span><span class="nf">http/get</span><span class="w"> </span><span class="n">url</span><span class="p">))</span><span class="w">
 
 </span><span class="p">(</span><span class="k">defn</span><span class="w"> </span><span class="n">write-html</span><span class="w"> </span><span class="p">[</span><span class="n">file</span><span class="w"> </span><span class="n">html</span><span class="p">]</span><span class="w">
   </span><span class="p">(</span><span class="nb">println</span><span class="w"> </span><span class="s">"Writing file:"</span><span class="w"> </span><span class="n">file</span><span class="p">)</span><span class="w">
@@ -3022,27 +3021,27 @@ PR is welcome.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/babashka/cli"><code>babashka.cli</code></a></p>
+<p><a href="https://github.com/babashka/cli"><code>babashka.cli</code></a>: CLI arg parsing</p>
 </li>
 <li>
-<p><a href="https://github.com/borkdude/babashka.curl"><code>babashka.curl</code></a></p>
+<p><a href="https://github.com/babashka/http-client"><code>babashka.http-client</code></a>: making HTTP requests</p>
 </li>
 <li>
-<p><a href="https://github.com/babashka/process"><code>babashka.process</code></a></p>
+<p><a href="https://github.com/babashka/process"><code>babashka.process</code></a>: shelling out to external processes</p>
 </li>
 <li>
-<p><a href="https://github.com/babashka/fs"><code>babashka.fs</code></a></p>
+<p><a href="https://github.com/babashka/fs"><code>babashka.fs</code></a>: file system manipulation</p>
 </li>
 <li>
 <p><a href="https://github.com/nrepl/bencode"><code>bencode.core</code></a> aliased as <code>bencode</code>:
 <code>read-bencode</code>, <code>write-bencode</code></p>
 </li>
 <li>
-<p><a href="https://github.com/dakrone/cheshire"><code>cheshire.core</code></a> aliased as <code>json</code></p>
+<p><a href="https://github.com/dakrone/cheshire"><code>cheshire.core</code></a> aliased as <code>json</code>: dealing with JSON</p>
 </li>
 <li>
 <p><a href="https://clojure.github.io/core.async/"><code>clojure.core.async</code></a> aliased as
-<code>async</code>. Also see <a href="https://github.com/borkdude/babashka#coreasync">docs</a>.</p>
+<code>async</code>.</p>
 </li>
 <li>
 <p><a href="https://github.com/clojure/data.csv"><code>clojure.data.csv</code></a> aliased as
@@ -3125,10 +3124,10 @@ as <code>transit</code></p>
 <p><a href="https://github.com/clojure/tools.logging"><code>clojure.tools.logging</code></a></p>
 </li>
 <li>
-<p><a href="https://github.com/ptaoussanis/timbre"><code>timbre</code></a></p>
+<p><a href="https://github.com/ptaoussanis/timbre"><code>timbre</code></a>: logging</p>
 </li>
 <li>
-<p><a href="https://github.com/borkdude/edamame"><code>edamame</code></a></p>
+<p><a href="https://github.com/borkdude/edamame"><code>edamame</code></a>: Clojure parser</p>
 </li>
 <li>
 <p><a href="https://github.com/clojure/core.rrb-vector"><code>core.rrb-vector</code></a></p>
@@ -3136,7 +3135,7 @@ as <code>transit</code></p>
 </ul>
 </div>
 <div class="paragraph">
-<p>Check out the <a href="https://babashka.org/toolbox/">babashk toolbox</a> and
+<p>Check out the <a href="https://babashka.org/toolbox/">babashka toolbox</a> and
 <a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md">projects</a> page
 for libraries that are not built-in, but which you can load as an external
 dependency in <a href="https://book.babashka.org/#_bb_edn"><code>bb.edn</code></a>.</p>
@@ -3366,11 +3365,10 @@ namespace.</p>
 </div>
 </div>
 <div class="sect3">
-<h4 id="babashkacurl"><a class="link" href="#babashkacurl">babashka.curl</a></h4>
+<h4 id="babashkahttpclient"><a class="link" href="#babashkahttpclient">babashka.http-client</a></h4>
 <div class="paragraph">
-<p>The namespace <code>babashka.curl</code> is a tiny wrapper around curl. It&#8217;s aliased as
-<code>curl</code> in the user namespace. See
-<a href="https://github.com/borkdude/babashka.curl">babashka.curl</a> for how to use it.</p>
+<p>The <code>babashka.http-client</code> library for making HTTP requests. See
+<a href="https://github.com/babashka/http-client">babashka.http-client</a> for how to use it.</p>
 </div>
 </div>
 <div class="sect3">
@@ -3698,74 +3696,6 @@ something side-effecting.</p>
 </div>
 <div class="paragraph">
 <p>If you really want to print the nil, you can use <code>(prn ..)</code> instead.</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_http_requests"><a class="link" href="#_http_requests">HTTP requests</a></h3>
-<div class="paragraph">
-<p>For making HTTP requests you can use:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://github.com/borkdude/babashka.curl">babashka.curl</a>. This library
-is included with babashka and aliased as <code>curl</code> in the user namespace.
-The interface is similar to that of
-<a href="https://github.com/dakrone/clj-http">clj-http</a> but it will shell out to
-<code>curl</code> to make requests.</p>
-</li>
-<li>
-<p><a href="https://github.com/http-kit/http-kit">org.httpkit.client</a></p>
-</li>
-<li>
-<p><code>slurp</code> for simple <code>GET</code> requests</p>
-</li>
-<li>
-<p><a href="https://github.com/babashka/clj-http-lite">clj-http-lite</a> as a library.</p>
-</li>
-<li>
-<p><code>clojure.java.shell</code> or <code>babashka.process</code> for shelling out to your
-favorite command line http client</p>
-</li>
-</ul>
-</div>
-<div class="sect3">
-<h4 id="_choosing_the_right_client"><a class="link" href="#_choosing_the_right_client">Choosing the right client</a></h4>
-<div class="paragraph">
-<p>If memory usage is a concern and you are downloading big files, choose
-<code>babashka.curl</code> with <code>:as :stream</code> over <code>org.httpkit.client</code> since
-http-kit holds the entire response in memory at once. Let&#8217;s download a
-200mb file with 10mb heap size:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">-Xmx10m</span><span class="w"> </span><span class="n">-e</span><span class="w"> </span><span class="o">'</span><span class="p">(</span><span class="nf">io/copy</span><span class="w"> </span><span class="p">(</span><span class="no">:body</span><span class="w"> </span><span class="p">(</span><span class="nf">curl/get</span><span class="w"> </span><span class="s">"http://ipv4.download.thinkbroadband.com/200MB.zip"</span><span class="w"> </span><span class="p">{</span><span class="no">:as</span><span class="w"> </span><span class="no">:stream</span><span class="p">}))</span><span class="w"> </span><span class="p">(</span><span class="nf">io/file</span><span class="w"> </span><span class="s">"/tmp/200mb.zip"</span><span class="p">))</span><span class="o">'</span></code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>With <code>babashka.curl</code> this works fine. However with <code>org.httpkit.client</code>
-that won&#8217;t work. Not even 190mb of heap will do:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">-Xmx190m</span><span class="w"> </span><span class="n">-e</span><span class="w"> </span><span class="o">'</span><span class="p">(</span><span class="nf">io/copy</span><span class="w"> </span><span class="p">(</span><span class="no">:body</span><span class="w"> </span><span class="o">@</span><span class="p">(</span><span class="nf">org.httpkit.client/get</span><span class="w"> </span><span class="s">"http://ipv4.download.thinkbroadband.com/200MB.zip"</span><span class="w"> </span><span class="p">{</span><span class="no">:as</span><span class="w"> </span><span class="no">:stream</span><span class="p">}))</span><span class="w"> </span><span class="p">(</span><span class="nf">io/file</span><span class="w"> </span><span class="s">"/tmp/200mb.zip"</span><span class="p">))</span><span class="o">'</span><span class="w">
-</span><span class="n">Sun</span><span class="w"> </span><span class="n">Nov</span><span class="w"> </span><span class="mi">08</span><span class="w"> </span><span class="mi">23</span><span class="no">:01:46</span><span class="w"> </span><span class="n">CET</span><span class="w"> </span><span class="mi">2020</span><span class="w"> </span><span class="p">[</span><span class="n">client-loop</span><span class="p">]</span><span class="w"> </span><span class="n">ERROR</span><span class="w"> </span><span class="nb">-</span><span class="w"> </span><span class="nb">select</span><span class="w"> </span><span class="n">exception,</span><span class="w"> </span><span class="n">should</span><span class="w"> </span><span class="nb">not</span><span class="w"> </span><span class="n">happen</span><span class="w">
-</span><span class="n">java.lang.OutOfMemoryError</span><span class="err">:</span><span class="w"> </span><span class="n">Array</span><span class="w"> </span><span class="n">allocation</span><span class="w"> </span><span class="n">too</span><span class="w"> </span><span class="n">large.</span></code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>If your script creates many requests with relatively small payloads,
-choose <code>org.httpkit.client</code> over <code>babashka.curl</code> since <code>babashka.curl</code>
-creates a <code>curl</code> process for each request.</p>
-</div>
-<div class="paragraph">
-<p>In the future babashka (1.0.0?) may come with an HTTP client based on
-the JVM 11 <code>java.net.http</code> package that ticks all the boxes (async,
-HTTP/2, websockets, multi-part file uploads, sane memory usage) and is a
-suitable replacement for all of the above options. If you know about a
-GraalVM-friendly feature-complete well-maintained library, please reach
-out!</p>
-</div>
 </div>
 <div class="sect3">
 <h4 id="_http_over_unix_sockets"><a class="link" href="#_http_over_unix_sockets">HTTP over Unix sockets</a></h4>
