--- a/index.html
+++ b/index.html
@@ -2051,7 +2051,7 @@ respected. This makes writing system-global scripts with dependencies easier.</p
 <p>Of course you can just call your script <code>medley</code> without the <code>.bb</code> extension.</p>
 </div>
 <div class="sect3">
-<h4 id="_windows"><a class="link" href="#_windows">Windows</a></h4>
+<h4 id="script-adjacent-bb-edn-windows"><a class="link" href="#script-adjacent-bb-edn-windows">Windows</a></h4>
 <div class="paragraph">
 <p>On Windows bash shebangs are not supported. An alternative is to create a script-adjacent <code>.bat</code> file, e.g <code>medley.bat</code>:</p>
 </div>
