--- a/index.html
+++ b/index.html
@@ -2029,7 +2029,7 @@ respected. This makes writing system-global scripts with dependencies easier.</p
 </div>
 </div>
 <div class="paragraph">
-<p>Given that <code>medley.bb</code> is executable, you can directly execute it in the current directory:</p>
+<p>Assuming that <code>medley.bb</code> is executable (<code>chmod +x medley.bb</code>), you can directly execute it in the current directory:</p>
 </div>
 <div class="listingblock">
 <div class="content">
