--- a/index.html
+++ b/index.html
@@ -2064,7 +2064,7 @@ bb %SCRIPT% %ARGS%</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Then add this script to your <code>%PATH</code>:</p>
+<p>Then add this script to your <code>%PATH%</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
