--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>Babashka v1.3.176
+<pre>Babashka v1.3.178
 
 Usage: bb [svm-opts] [global-opts] [eval opts] [cmdline args]
 or:    bb [svm-opts] [global-opts] file [cmdline args]
@@ -982,7 +982,7 @@ Global opts:
   -cp, --classpath  Classpath to use. Overrides bb.edn classpath.
   --debug           Print debug information and internal stacktrace in case of exception.
   --init &lt;file&gt;     Load file after any preloads and prior to evaluation/subcommands.
-  --config &lt;file&gt;   Replacing bb.edn with file. Relative paths are resolved relative to file.
+  --config &lt;file&gt;   Replace bb.edn with file. Defaults to bb.edn adjacent to invoked file or bb.edn in current dir. Relative paths are resolved relative to file.
   --deps-root &lt;dir&gt; Treat dir as root of relative paths in config.
   --prn             Print result via clojure.core/prn
   -Sforce           Force recalculation of the classpath (don't use the cache)
@@ -2935,7 +2935,7 @@ flag (a pun to Clojure’s <code>-X</code> of course!):</p>
 </div>
 <div class="paragraph">
 <p>What we see in the above snippet is that a map <code>{:hello "there"}</code> is
-constructed by babashka CLI and then fed to the <code>identity</code> function.
+constructed by babashka CLI and then fed to the <code>prn</code> function.
 After that the result is printed to the console.</p>
 </div>
 <div class="paragraph">
