--- a/index.html
+++ b/index.html
@@ -1136,39 +1136,31 @@ being executed:</p>
 <h3 id="_parsing_command_line_arguments"><a class="link" href="#_parsing_command_line_arguments">Parsing command line arguments</a></h3>
 <div class="paragraph">
 <p>Command-line arguments can be retrieved using <code>*command-line-args*</code>. If you
-want to parse command line arguments, you may use the built-in
-<code>clojure.tools.cli</code> namespace:</p>
-</div>
-<div class="paragraph">
-<p>Babashka ships with <code>clojure.tools.cli</code>:</p>
+want to parse command line arguments, you can use the built-in
+<code>babashka.cli</code> namespace:</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">clojure.tools.cli</span><span class="w"> </span><span class="no">:refer</span><span class="w"> </span><span class="p">[</span><span class="n">parse-opts</span><span class="p">]])</span><span class="w">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.cli</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">cli</span><span class="p">])</span><span class="w">
 
-</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">cli-options</span><span class="w">
-  </span><span class="c1">;; An option with a required argument</span><span class="w">
-  </span><span class="p">[[</span><span class="s">"-p"</span><span class="w"> </span><span class="s">"--port PORT"</span><span class="w"> </span><span class="s">"Port number"</span><span class="w">
-    </span><span class="no">:default</span><span class="w"> </span><span class="mi">80</span><span class="w">
-    </span><span class="no">:parse-fn</span><span class="w"> </span><span class="o">#</span><span class="p">(</span><span class="nf">Integer/parseInt</span><span class="w"> </span><span class="n">%</span><span class="p">)</span><span class="w">
-    </span><span class="no">:validate</span><span class="w"> </span><span class="p">[</span><span class="o">#</span><span class="p">(</span><span class="nb">&lt;</span><span class="w"> </span><span class="mi">0</span><span class="w"> </span><span class="n">%</span><span class="w"> </span><span class="mi">0</span><span class="n">x10000</span><span class="p">)</span><span class="w"> </span><span class="s">"Must be a number between 0 and 65536"</span><span class="p">]]</span><span class="w">
-   </span><span class="p">[</span><span class="s">"-h"</span><span class="w"> </span><span class="s">"--help"</span><span class="p">]])</span><span class="w">
+</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">cli-options</span><span class="w"> </span><span class="p">{</span><span class="no">:port</span><span class="w"> </span><span class="p">{</span><span class="no">:default</span><span class="w"> </span><span class="mi">80</span><span class="w"> </span><span class="no">:coerce</span><span class="w"> </span><span class="no">:long</span><span class="p">}</span><span class="w">
+                  </span><span class="no">:help</span><span class="w"> </span><span class="p">{</span><span class="no">:coerce</span><span class="w"> </span><span class="no">:boolean</span><span class="p">}</span><span class="w">
 
-</span><span class="p">(</span><span class="no">:options</span><span class="w"> </span><span class="p">(</span><span class="nf">parse-opts</span><span class="w"> </span><span class="n">*command-line-args*</span><span class="w"> </span><span class="n">cli-options</span><span class="p">))</span></code></pre>
+</span><span class="p">(</span><span class="nb">prn</span><span class="w"> </span><span class="p">(</span><span class="no">:options</span><span class="w"> </span><span class="p">(</span><span class="nf">cli/parse-opts</span><span class="w"> </span><span class="n">*command-line-args*</span><span class="w"> </span><span class="p">{</span><span class="no">:spec</span><span class="w"> </span><span class="n">cli-options</span><span class="p">})))</span></code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="content">
 <pre class="rouge highlight"><code data-lang="bash"><span class="nv">$ </span>bb script.clj
 <span class="o">{</span>:port 80<span class="o">}</span>
-<span class="nv">$ </span>bb script.clj <span class="nt">-h</span>
+<span class="nv">$ </span>bb script.clj <span class="nt">--port</span> 1223
+<span class="o">{</span>:port 1223<span class="o">}</span>
+<span class="nv">$ </span>bb script.clj <span class="nt">--help</span>
 <span class="o">{</span>:port 80, :help <span class="nb">true</span><span class="o">}</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>There is also the
-<a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md#nubankdocopt">nubank/docopt</a>
-library that is compatible with babashka.</p>
+<p>Note that <a href="https://github.com/clojure/tools.cli">clojure.tools.cli</a> is also built-in to babashka.</p>
 </div>
 </div>
 <div class="sect2">
