--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@ being executed:</p>
 <div class="paragraph">
 <p>Command-line arguments can be retrieved using <code>*command-line-args*</code>. If you
 want to parse command line arguments, you can use the built-in
-<code>babashka.cli</code> namespace:</p>
+<a href="https://github.com/babashka/cli"><code>babashka.cli</code></a> namespace:</p>
 </div>
 <div class="listingblock">
 <div class="content">
