--- a/index.html
+++ b/index.html
@@ -1733,7 +1733,7 @@ bb glob.clj <span class="s1">'*.md'</span>   0.03s  user 0.01s system 88% cpu 0.
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="bash"><span class="nv">$ </span>bb uberscript glob-uberscript.clj <span class="nt">-f</span> glob.clj</code></pre>
+<pre class="rouge highlight"><code data-lang="bash"><span class="nv">$ </span>bb uberscript glob-uberscript.clj glob.clj</code></pre>
 </div>
 </div>
 <div class="paragraph">
