--- a/index.html
+++ b/index.html
@@ -3104,6 +3104,9 @@ PR is welcome.</p>
 <p><code>clojure.test</code></p>
 </li>
 <li>
+<p><code>clojure.walk</code></p>
+</li>
+<li>
 <p><code>clojure.zip</code></p>
 </li>
 </ul>
