--- a/master.html
+++ b/master.html
@@ -2542,7 +2542,9 @@ ls</span>: foo: No such file or directory
 </div>
 </div>
 <div class="paragraph">
-<p>To capture output as a string, pass the special value <code>:string</code> and get the <code>:out</code> key from the resulting map. In most cases, you probably want to <code>trim</code> away the trailing newline as well:</p>
+<p>To capture output as a string, set <code>:out</code> to <code>:string</code> and get the <code>:out</code> key
+from the resulting map. In most cases, you probably want to <code>trim</code> away the
+trailing newline as well:</p>
 </div>
 <div class="listingblock">
 <div class="content">
